# telem-filter

./: CMakeLists.txt  Doxyfile  README.md
cmake/: FindMathGL2.cmake
matlab/: v_analysis.m
src/: c11_binary_latch.h  csv_reader.cpp  csv_reader.h  csv_writer.cpp  csv_writer.h  digital_filter.cpp  digital_filter.h  filter.cpp  filter.h  main.cpp  mgl_plotter.cpp  mgl_plotter.h  stage_1_plotter.cpp  stage_1_plotter.h  stage_2_plotter.cpp  stage_2_plotter.h  stage_3_plotter.cpp  stage_3_plotter.h  staged_mgl_plotter.h  staged_telem_plotter.h  telem_data.cpp  telem_data.h  telem_data_json.cpp  telem_data_json.h  telem_plotter.cpp  telem_plotter.h  telem_staged_plotter.h  vector2d.cpp  vector2d.h
